@@ -23,3 +23,7 @@ Improve _load_card
 Create the three cards graph
 
 Change top in deck to take input an integer and return the first n.
+
+WRITE DOCUMENTATION AND EXPLANATIONS ABOUT THE ORDER OF THE CARDS
+
+Rename empty to makeempty() in Deck
