@@ -1,0 +1,3 @@
+a = [i for i  in range(10)]
+
+print(a[:-4:-1])
